updated html and styles

--- a/index.html
+++ b/index.html
@@ -29,27 +29,31 @@
             <div class="jobs">
                 <div>
                     <h3>Capital One</h3>
-                    <div id="role">UX Design Lead <span id="accentText">//</span> 2015 <span id="accentText">-</span> Present
-                    </div>
+                    <h4>UX Design Lead</h4>
+                    <h5>2015 - Present</h5>
                     <p>At Capital One, we think big and do big things. We were the first company to develop and offer mass customization and personalization of credit card products, and we’ve been innovating relentlessly ever since. Today, we are a nationally recognized brand, a top-ten bank, and a scientific laboratory on a journey to become a leading high-tech company and digital innovator touching more than 65 million customer accounts. At Capital One, we dare to dream, disrupt, and deliver a better way for our customers, the financial industry, and for each other.</p>
                 </div>
                 <div>
                     <h3>Tekzenit</h3>
-                    <div id="role">UX Designer <span id="accentText">//</span> 2014 <span id="accentText">-</span> 2015</div>
+                    <h4>UX Designer</h4>
+                    <h5>2014 - 2015</h5>
                     <p>Tekzenit, in business since 2008, is a full-service IT solutions provider specializing in user experience engineering, custom software development and strategic consulting. Supporting small, medium and enterprise level clients with experience in a multitude of industries including telecommunications, energy, medical, finance, legal and the retail service sectors, Tekzenit utilizes a global delivery serve framework leveraging their offices and operations in the United States, India and Portugal.</p>
                 </div>
                 <div>
                     <h3>The Marketing Arm</h3>
-                    <div id="role">Art Director <span id="accentText">//</span> 2012 <span id="accentText">-</span> 2014</div>
+                    <h4>Art Director</h4>
+                    <h5>2012 - 2014</h5>
                     <p>We are built to help brands engage along the entire consumer journey. Our focus? Make brands mean something to consumers no matter how they come in contact. Which is why we have deep expertise across multiple disciplines. This creates an integrated solution of the critical marketing capabilities you need. Not to mention less overhead and more cohesive thinking.</p>
                 </div>
                 <div>
                     <h3>Bell’Invito</h3>
-                    <div id="role">Art Director <span id="accentText">//</span> 2009 <span id="accentText">-</span> 2012</div>
+                    <h4>Art Director</h4>
+                    <h5>2009 - 2012</h5>
                 </div>
                 <div>
                     <h3>The Graphic Shop</h3>
-                    <div id="role">Lead Designer <span id="accentText">//</span> 2007 <span id="accentText">-</span> 2009</div>
+                    <h4>Lead Designer</h4>
+                    <h5>2007 - 2009</h5>
                 </div>
             </div>
         </div>
@@ -58,12 +62,14 @@
         <div class="education">
         <div>
             <h3>Austin Coding Academy</h3>
-            <div id="role">Certification in Full-Stack JavaScript <span id="accentText">//</span> 2018 <span id="accentText">-</span> Present</div>
+            <h4>Full-Stack Development Certification</h4>
+            <h5>2018 - Present</h5>
         </div>
 
         <div>
             <h3>Stephen F. Austin State University</h3>
-            <div id="role">Bachelor of Fine Arts in Advertising Design <span id="accentText">+</span> Digital Media <span id="accentText">//</span> 2005 <span id="accentText">-</span> 2009 (Cum Laude)</div>
+            <h4>Bachelor of Fine Arts in Advertising Design</h4>
+            <h5>2005 - 2009 (Cum Laude)</h5>
         </div>
 
         </div>
@@ -74,10 +80,9 @@
                 <div>
                     <h3>Design</h3>
                     <ul>
-                        <li>Illustrator</li>
-                        <li>Photoshop</li>
+                        <li>Illustrator CC</li>
+                        <li>Photoshop CC</li>
                         <li>InDesign</li>
-                        <li>Figma</li>
                         <li>Sketch</li>
                     </ul>
                 </div>
@@ -85,15 +90,16 @@
                     <h3>Prototyping</h3>
                     <ul>
                         <li>Axure RP</li>
+                        <li>Figma</li>
                         <li>InVision</li>
                         <li>HTML + CSS</li>
-                        <li>Javascript</li>
                     </ul>
                 </div>
                 <div>
                     <h3>Bonus</h3>
                     <ul>
                         <li>Git + Github</li>
+                        <li>Javascript</li>
                         <li>React</li>
                         <li>High Fives</li>
                     </ul>
