--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <li>Illustrator CC</li>
                         <li>Photoshop CC</li>
                         <li>InDesign</li>
+                        <li>Figma</li>
                         <li>Sketch</li>
                     </ul>
                 </div>
@@ -90,7 +91,7 @@
                     <h3>Prototyping</h3>
                     <ul>
                         <li>Axure RP</li>
-                        <li>Figma</li>
+                        <li>Figma Prototype</li>
                         <li>InVision</li>
                         <li>HTML + CSS</li>
                     </ul>
