--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <footer>
             <div class="contact">
                 <h2>Contact</h2>
-                <p>Call me, <a href="https://youtu.be/fWNaR-rxAic">maybe.</a></p>
+                <h3>Call me, <a href="https://youtu.be/fWNaR-rxAic">maybe.</a></h3>
             </div>
         </footer>
     </div>
