updated site design and content

--- a/index.html
+++ b/index.html
@@ -7,14 +7,62 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <title>Jonny Abowd</title>
 </head>
 
 <body>
-    <div>
-        <h1>Jonny Abowd</h1>
-        <div id="role">DESIGN <span id="accentText">+</span> HIGH FIVES</div>
+    <div class="profile">
+        <div class="heroes">
+            <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd.</span></h1>
+            <img class="profile-img" src="/images/ja-profile-photo.png"
+                alt="Portrait image of Jonny Abowd's devilishly handsome face.">
+        </div>
+        <h2 class="font-display title fade-in">Digital designer, problem solver, and smile
+            enthusiast <span class="smile">:)</span>
+        </h2>
+        <div class="body fade-in">
+            <p class="bio">
+                I am a dedicated creative that thrives by finding simple solutions to the most complex and demanding
+                challenges. Possessing over 10 years experience working in a variety of mediums, with clientele both
+                large and small, I never miss a chance to learn. Cohorts have known me to be a reliable team player,
+                consistently delivering creative solutions with precision, flexibility, and an always-positive attitude.
+            </p>
+            <div class="contact">
+                <div class="links">
+                    <a href="mailto:hello@jonnyabowd.com?subject=Hello Jonny!">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M29.7526 0.20188L0.780705 16.911C-0.350666 17.5609 -0.2069 19.1356 0.91822 19.6105L7.56268 22.3974L25.5209 6.5756C25.8646 6.26941 26.3522 6.73807 26.0584 7.09425L11.0006 25.4343V30.4646C11.0006 31.9393 12.782 32.5204 13.6571 31.4519L17.6263 26.6216L25.4146 29.8834C26.3022 30.2583 27.3148 29.7022 27.4773 28.7461L31.9778 1.75157C32.1903 0.489322 30.8339 -0.422995 29.7526 0.20188Z"
+                                fill="#F18D2F" />
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/jonnyabowd/">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M0 2.29228C0 1.02663 1.0587 0 2.36474 0H29.6353C30.9412 0 32 1.02663 32 2.29228V29.7077C32 30.9738 30.9412 32 29.6353 32H2.36474C1.0587 32 0 30.9738 0 29.7077V2.29228ZM9.70009 26.7872V12.3374H4.86677V26.7872H9.70009ZM7.28341 10.3646C8.96888 10.3646 10.018 9.25497 10.018 7.86832C9.98654 6.45045 8.96889 5.37165 7.31538 5.37165C5.66205 5.37165 4.58105 6.45045 4.58105 7.86832C4.58105 9.25497 5.6299 10.3646 7.2519 10.3646H7.28331H7.28341ZM17.2083 26.7872H12.3751C12.3751 26.7872 12.4386 13.6933 12.3751 12.3374H17.2084V14.3832C17.1975 14.4 17.1867 14.4166 17.1761 14.433H17.2084V14.3832C17.8507 13.3986 19.0003 11.9984 21.5642 11.9984C24.7442 11.9984 27.1287 14.0636 27.1287 18.5019V26.7872H22.2958V19.0569C22.2958 17.1144 21.5961 15.7893 19.8472 15.7893C18.512 15.7893 17.7167 16.683 17.3673 17.5458C17.2397 17.8546 17.2083 18.286 17.2083 18.7178V26.7872Z"
+                                fill="#F18D2F" />
+                        </svg>
+
+                    </a>
+                </div>
+                <p class="font-display copyright">© Jonny Abowd 2021</p>
+            </div>
+        </div>
+    </div>
+    <div class="built-by">
+        Built with
+        <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd"
+                d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                clip-rule="evenodd" />
+        </svg>
+        by Jonny Abowd
     </div>
 </body>
 
