updated link test

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="profile">
         <div class="heroes">
             <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd.</span></h1>
-            <img class="profile-img" src="/images/ja-profile-photo.png"
+            <img class="profile-img" src="./images/ja-profile-photo.png"
                 alt="Portrait image of Jonny Abowd's devilishly handsome face.">
         </div>
         <h2 class="font-display title fade-in">Digital designer, problem solver, and smile
