--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </h2>
         <div class="body fade-in">
             <p class="bio">
-                I am a dedicated creative that thrives by finding simple solutions to the most complex and demanding
+                I am a dedicated creative that thrives on finding simple solutions to the most complex and demanding
                 challenges. Possessing over 10 years experience working in a variety of mediums, with clientele both
                 large and small, I never miss a chance to learn. Cohorts have known me to be a reliable team player,
                 consistently delivering creative solutions with precision, flexibility, and an always-positive attitude.
