--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53404618-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-53404618-1');
+    </script>
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
     <title>Jonny Abowd</title>
