--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -35,15 +35,20 @@
             <img class="profile-img" src="./images/ja-profile-photo.png"
                 alt="Portrait image of Jonny Abowd's devilishly handsome face.">
         </div>
-        <h2 class="font-display title fade-in">Digital designer, problem solver, and smile
-            enthusiast <span class="smile">:)</span>
+        <h2 class="font-display title fade-in">Digital designer, problem solver, and highfive
+            enthusiast
         </h2>
         <div class="body fade-in">
             <p class="bio">
-                I am a dedicated creative that thrives on finding simple solutions to the most complex and demanding
-                challenges. Possessing over 10 years experience working in a variety of mediums, with clientele both
+                I am a dedicated creative that thrives on finding simple solutions to complex and demanding
+                challenges. Possessing over 10 years experience working in a variety of mediums with clientele both
                 large and small, I never miss a chance to learn. Cohorts have known me to be a reliable team player,
-                consistently delivering creative solutions with precision, flexibility, and an always-positive attitude.
+                consistently delivering creative solutions with precision, flexibility, and a relentlessly positive
+                attitude.
+                <br><br>
+                Feel free to reach out and <a href="mailto:hello@jonnyabowd.com?subject=Hello Jonny!"
+                    class="contact-text-link">contact me
+                </a> with any questions or inquires.
             </p>
             <div class="contact">
                 <div class="links">
