added description meta tag

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
     <title>Jonny Abowd</title>
+    <meta name="description" content="Digital designer, problem solver, and high five enthusiast." />
+    <meta name="robots" content="index, follow">
 </head>
 
 <body>
@@ -35,8 +37,7 @@
             <img class="profile-img" src="./images/ja-profile-photo.png"
                 alt="Portrait image of Jonny Abowd's devilishly handsome face.">
         </div>
-        <h2 class="font-display title fade-in">Digital designer, problem solver, and highfive
-            enthusiast
+        <h2 class="font-display title fade-in">Digital designer, problem solver, and high five enthusiast
         </h2>
         <div class="body fade-in">
             <p class="bio">
