minor styling update

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                 attitude.
                 <br><br>
                 Feel free to reach out and <a href="mailto:hello@jonnyabowd.com?subject=Hello Jonny!"
-                    class="contact-text-link">contact me
-                </a> with any questions or inquires.
+                    class="contact-text-link">contact me</a> with any questions or inquires.
             </p>
             <div class="contact">
                 <div class="links">
