updated styling and roughed out content structure

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
         </div>
         <h2 class="font-display title fade-in">Digital designer, problem solver, and high five enthusiast
         </h2>
+        <!-- <div class="hr"></div> -->
         <div class="body fade-in">
             <p class="bio">
                 I am a dedicated creative that thrives on finding simple solutions to complex and demanding
-                challenges. Possessing over 10 years experience working in a variety of mediums with clientele both
+                challenges. Possessing over 14 years experience working in a variety of mediums with clientele both
                 large and small, I never miss a chance to learn. Cohorts have known me to be a reliable team player,
                 consistently delivering creative solutions with precision, flexibility, and a relentlessly positive
                 attitude.
@@ -73,31 +74,217 @@
                 <p class="font-display copyright">© Jonny Abowd 2021</p>
             </div>
         </div>
-
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            View Case Study
-        </button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-fullscreen">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="hr"></div>
+        <section class="work">
+            <h2 class="font-display">Selected Projects</h2>
+            <div class="container-fluid">
+                <div class="row mt-2 mb-0">
+                    <div class="col-4 project-preview">
+                        <div></div>
+                        <h3>Wikibuy Mobile App Redesign</h3>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            View Case Study
+                        </button>
                     </div>
-                    <div class="modal-body">
-                        ...
+                    <div class="col-4 project-preview">
+                        <div></div>
+                        <h3>HUEY Weather App</h3>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            View Case Study
+                        </button>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                    <div class="col-4 project-preview">
+                        <div></div>
+                        <h3>Capital One Auto Loan Tools</h3>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            View Case Study
+                        </button>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <div class="col-4 project-preview">
+                        <div></div>
+                        <h3>AT&T Connecting Flight</h3>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            View Case Study
+                        </button>
+                    </div>
+                    <div class="col-4 project-preview">
+                        <div></div>
+                        <h3>Skylanders 3D Adventure</h3>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            View Case Study
+                        </button>
+                    </div>
+                    <div class="col-4 project-preview">
+                        <div></div>
+                        <h3>Select Visual Design</h3>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            View Work
+                        </button>
                     </div>
                 </div>
             </div>
-        </div>
 
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-fullscreen">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Wikibuy Mobile App Redesign</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <div class="row mt-2 mb-5">
+                                    <h6 class="modal-subhead">The Problem</h6>
+                                    <div class="col-12">
+                                        The existing Wikibuy mobile application had issues with usability, stability,
+                                        new
+                                        user attrition, and a lack of overall revenue generation for the business. My
+                                        design
+                                        team and I were tasked with shoring up the customer experience, improving
+                                        overall
+                                        engagement, and increasing downstream effects to potential revenue.
+                                    </div>
+                                </div>
+                                <div class="row mb-5">
+                                    <h6 class="modal-subhead">My Role</h6>
+                                    <div class="col-4">
+                                        <ul>
+                                            <li>Design Management</li>
+                                            <li>Research</li>
+                                            <li>Wireframing</li>
+                                            <li>UX/UI Design</li>
+                                            <li>Prototyping</li>
+                                            <li>Design System Development</li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-8">
+                                        I worked closely with our product and research team to identify the
+                                        largest opportunities for improving the overall customer experience and increase
+                                        mobile purchases through our app. I guided my design team into creating a series
+                                        of
+                                        viable solutions for improved user flows and net new functionality that could be
+                                        implemented on shortened delivery timelines with our engineering team.
+                                    </div>
+                                </div>
+                                <div class="row mb-5">
+                                    <img class="col-12"
+                                        src="/images/project-wikibuy-mobile-redesign/jonny-abowd-wikibuy-hero.png">
+                                </div>
+                                <div class="row mb-5">
+                                    <h6 class="modal-subhead">The Solution</h6>
+                                    <div class="col-12">
+                                        After conducting a series of qualitative interviews with our customers,
+                                        analyzing
+                                        app usage, and examining performance data we identified the largest pain points
+                                        and
+                                        opportunities to improve the experience. We then redesigned a series of core
+                                        flows
+                                        within the app including a completely new personalized home page, improved
+                                        search
+                                        experience, new onboarding flow with push notification enrollment, redesigned
+                                        price
+                                        comparison experience. We also designed and built a new in-app shopping flow
+                                        that
+                                        allowed us to integrate our flagship Automatic Coupon service. This gave the app
+                                        full feature parity with our core desktop browser extension product and brought
+                                        30%
+                                        more savings to customers shopping through the app.
+                                    </div>
+                                </div>
+                                <div class="row mb-5">
+                                    <img class="col-3"
+                                        src="/images/project-wikibuy-mobile-redesign/jonny-abowd-wikibuy-1.png">
+                                    <img class="col-3"
+                                        src="/images/project-wikibuy-mobile-redesign/jonny-abowd-wikibuy-1.png">
+                                    <img class="col-3"
+                                        src="/images/project-wikibuy-mobile-redesign/jonny-abowd-wikibuy-1.png">
+                                    <img class="col-3"
+                                        src="/images/project-wikibuy-mobile-redesign/jonny-abowd-wikibuy-1.png">
+                                </div>
+                                <div class="row mb-5">
+                                    <h6 class="modal-subhead">Results</h6>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>
+                                                The new homepage design led to a 25% increase in purchases
+                                                year-over-year.
+                                            </li>
+                                            <li>The redesigned price comparison experience increased purchases by around
+                                                40%
+                                                year-over-year.</li>
+                                            <li>In the process we also rebranded from Wikibuy to the new Capital One
+                                                Shopping brand in time for a national advertising launch in Fall 2020.
+                                            </li>
+                                            <li>App store rating increases from 3.3 to 4.7 stars</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary">Download for iOS</button>
+                            <button type="button" class="btn btn-primary">Download for Android</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="hr"></div>
+        <section class="clients">
+            <h2 class="font-display">Brands I've Worked With</h2>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-4 client-logo">
+                        <img src="/images/client-logos/ja-client-cof.svg" alt="Capital One">
+                    </div>
+                    <div class="col-4 client-logo">
+                        <img src="images/client-logos/ja-client-att.svg" alt="AT&T">
+                    </div>
+                    <div class="col-4 client-logo">
+                        <img src="/images/client-logos/ja-client-wm.svg" alt="Walmart">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 client-logo">
+                        <img src="/images/client-logos/ja-client-sf.svg" alt="State Farm">
+                    </div>
+                    <div class="col-4 client-logo">
+                        <img src="images/client-logos/ja-client-fl.svg" alt="Frito Lay">
+                    </div>
+                    <div class="col-4 client-logo">
+                        <img src="/images/client-logos/ja-client-av.svg" alt="Activision">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 client-logo">
+                        <img src="/images/client-logos/ja-client-dor.svg" alt="Doritos">
+                    </div>
+                    <div class="col-4 client-logo">
+                        <img src="images/client-logos/ja-client-dan.svg" alt="Dannon">
+                    </div>
+                    <div class="col-4 client-logo">
+                        <img src="/images/client-logos/ja-client-cheet.svg" alt="Cheetos">
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <div class="built-by">
         Built with
