tweaks based on feedback and added additional projects and images

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="body fade-in">
             <p class="bio">
                 I am a dedicated creative that thrives on finding simple solutions to complex and demanding
-                challenges. Possessing over 14 years experience working in a variety of mediums with clientele both
+                challenges. Possessing over 14 years of experience working in a variety of mediums with clientele both
                 large and small, I never miss a chance to learn. Cohorts have known me to be a reliable team leader,
                 consistently delivering creative solutions with precision, flexibility, and a relentlessly positive
                 attitude.
