--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -40,6 +40,7 @@
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
                     <div class="row mt-2 mb-5">
+                        <h2 class="my-4 project-title">Auto Loan Tracker</h2>
                         <h2 class="modal-subhead">Problem</h2>
                         <div class="col-12">
                             A large number of auto loan customers reaching the end of their loan term discovered a
@@ -114,7 +115,9 @@
                         Possible Auto Loan Tracker detail states including Default, Early Payoff Projected, and
                         Additional Balance Projected.
                     </p>
+                    <hr class="my-5">
                     <div class="row mt-2 mb-5">
+                        <h2 class="my-4 project-title">Get Current</h2>
                         <h2 class="modal-subhead">Problem</h2>
                         <div class="col-12">
                             Life happens. Customers fall behind on payments and, in many cases, they need help keeping
@@ -202,17 +205,19 @@
                         <div class="col-12">
                             <ul>
                                 <li class="mb-3">
-                                    Over half of the Customers using the tool online during the pilot had been
+                                    Over half of the customers using the tool online during the pilot had been
                                     unreachable by phone despite numerous attempts, so it was clear that adding this
                                     self-service channel satisfied a demand for digital access to a repayment tool.
                                 </li>
                                 <li class="mb-3">
-                                    It also freed up hundreds of hours of our phone agents’ time to help customers who
+                                    This tool also freed up hundreds of hours of per week of phone agents’ time to help
+                                    customers who
                                     prefer to speak on the phone.
                                 </li>
                                 <li class="mb-3">
-                                    We initially saw over $4MM a year in loss reduction, and that figure doubled once we
-                                    rolled it out on our mobile app.
+                                    We initially saw over $4MM a year in loss reduction, and that figure is expected to
+                                    double once this feature is
+                                    rolled it out on the Capital One mobile apps.
                                 </li>
                                 <li>
                                     We demonstrated that doing what’s right for our customers in difficult situations
