--- a/projects/laysstaxwebsite.html
+++ b/projects/laysstaxwebsite.html
@@ -62,15 +62,36 @@
                             to development partners. I was also involved in the content creation throughout the site.
                         </div>
                     </div>
-
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <p class="col-12 text-center mt-0 mb-3">
+                            Homepage design with custom imagery
+                        </p>
                         <div class="col-12 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/stax-home.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Homepage design with custom imagery.
-                    </p>
+                    <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <p class="col-12 text-center mt-0 mb-3">
+                            Product detail pages with lifestyle collages
+                        </p>
+                        <div class="col-12 d-flex flex-column">
+                            <img class="col-12" src="/images/project-images/stax-product1.png">
+                        </div>
+                        <div class="col-12 d-flex flex-column">
+                            <img class="col-12" src="/images/project-images/stax-product2.png">
+                        </div>
+                        <div class="col-12 d-flex flex-column">
+                            <img class="col-12" src="/images/project-images/stax-product3.png">
+                        </div>
+                    </div>
+                    <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <p class="col-12 text-center mt-0 mb-3">
+                            Store locator page
+                        </p>
+                        <div class="col-12 d-flex flex-column">
+                            <img class="col-12" src="/images/project-images/stax-store.png">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
