--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -150,7 +150,8 @@
                                 We also designed
                                 and built a new in-app shopping flow that allowed us to integrate our flagship Automatic
                                 Coupon service. This gave the app full feature parity with our core desktop browser
-                                extension product and brought 30% more savings to customers shopping through the app.
+                                extension product and gave customers on average 30% more savings when shopping through
+                                the app.
                             </p>
                         </div>
                     </div>
