--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -40,9 +40,12 @@
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
                     <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <h2 class="mb-4 col-12 text-center project-title">Platform Launch Posters</h2>
                         <p class="col-12 text-center mt-0 mb-5">
-                            Concepted and designed a series of posters advertising the launch of the enterprise account
-                            servicing experience at the Capital One corporate headquarters.
+                            Concepted and designed a series of posters advertising the launch of the Enterprise Account
+                            Servicing Experience at the Capital One corporate headquarters. The theme was intended to
+                            follow a
+                            larger tech "transformation" initiative happening across the company.
                         </p>
                         <div class="col-12 col-lg-6 px-0 mb-3 d-flex justify-content-center">
                             <div class="col-6 d-flex flex-column">
@@ -62,6 +65,7 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <h2 class="mb-4 col-12 text-center project-title">Design Rumble Logo</h2>
                         <p class="col-12 text-center mt-0 mb-5">
                             Concepted and designed a logo for a monthly design offsite event focused on skill building
                             and
@@ -85,7 +89,8 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <p class="col-12 text-center mt-5 mb-5">
+                        <h2 class="mb-4 col-12 text-center project-title">C3 Summit Event Design</h2>
+                        <p class="col-12 text-center mt-0 mb-5">
                             Concepted and created event branding for the annual Capital One Collaborative Code Community
                             front-end developer summit.
                         </p>
@@ -122,23 +127,73 @@
                         <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
                             <img class="col-10 px-2" src="/images/project-images/visualdesign/c3-summit-email.png">
                         </div>
-                        <p class="col-12 text-center mt-5 mb-3">
-                            Name badge
-                        </p>
                         <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
-                            <img class="col-4 px-2" src="/images/project-images/visualdesign/c3-summit-name.png">
+                            <div class="col-6">
+                                <p class="col-12 text-center mt-5 mb-3">
+                                    Name badge
+                                </p>
+                                <div class="col-12 mb-3 d-flex justify-content-center">
+                                    <img class="col-8 px-2"
+                                        src="/images/project-images/visualdesign/c3-summit-name.png">
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <p class="col-12 text-center mt-5 mb-3">
+                                    Wayfinding signage
+                                </p>
+                                <div class="col-12 mb-3 d-flex justify-content-center">
+                                    <img class="col-8 px-2"
+                                        src="/images/project-images/visualdesign/c3-summit-wayfinding.png">
+                                </div>
+                            </div>
                         </div>
-                        <p class="col-12 text-center mt-5 mb-3">
-                            Wayfinding signage
+
+                    </div>
+                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <h2 class="mb-4 col-12 text-center project-title">Doritos Displays and Products</h2>
+                        <p class="col-12 text-center mt-0 mb-3">
+                            Concepted and designed in-store displays, packaging, and merchandise for the Doritos brand.
                         </p>
-                        <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
-                            <img class="col-5 px-2" src="/images/project-images/visualdesign/c3-summit-wayfinding1.png">
-                            <img class="col-5 px-2" src="/images/project-images/visualdesign/c3-summit-wayfinding2.png">
+                        <div class="col-12 mb-3 d-flex justify-content-center">
+                            <div class="col-12 col-md-10 d-flex flex-column">
+                                <img class="col-12 mx-2" src="/images/project-images/visualdesign/dor-display.png">
+                            </div>
+                        </div>
+                        <div class="col-12 px-0 d-flex justify-content-center">
+                            <img class="col-4" src="/images/project-images/visualdesign/dor-product1.png">
+                            <img class="col-4 mx-3" src="/images/project-images/visualdesign/dor-product2.png">
+                            <img class="col-4" src="/images/project-images/visualdesign/dor-product3.png">
+                        </div>
+                    </div>
+                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <h2 class="mb-4 col-12 text-center project-title">Billion Dollar Bracket Promotion</h2>
+                        <p class="col-12 text-center mt-0 mb-5">
+                            Concepted and designed promotion logo and in-store display for a partnership between
+                            Unilever and the NCAA.
+                        </p>
+                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
+                            <img src="/images/project-images/visualdesign/UL-BDB1.png">
+                        </div>
+                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
+                            <img src="/images/project-images/visualdesign/UL-BDB2.png">
+                        </div>
+                    </div>
+                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <h2 class="mb-4 col-12 text-center project-title">Lay's In-Store Displays</h2>
+                        <p class="col-12 text-center mt-0 mb-0">
+                            Concepted and designed themed in-store product displays for the Lay's brand.
+                        </p>
+                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
+                            <img src="/images/project-images/visualdesign/lays-display1.png">
+                        </div>
+                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
+                            <img src="/images/project-images/visualdesign/lays-display2.png">
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                        <h2 class="mb-4 col-12 text-center project-title">Agile Release Train Logo</h2>
                         <p class="col-12 text-center mt-0 mb-5">
-                            Logo design for a deveopment team with the requirement of incorporating a train and a
+                            Design a logo for a development team with the requirement of incorporating a train and a
                             mullet.
                             Yes, a mullet. Glorious.
                         </p>
