fixed a typo you idiot

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 attitude.
                 <br><br>
                 Feel free to reach out and <a href="#contact" class="contact-text-link">contact me</a> with any
-                questions or inquires.
+                questions or inquiries.
             </p>
             <div class="contact">
                 <div class="links">
