fixed another typo

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             lifelong pursuit of everything
                             fun
                             and
-                            fulfilling. “Funfilling,” if you will.
+                            fulfilling. “Fun-filling,” if you will.
                         </p>
                         <p class="contact-info col-md-11">
                             Those who know me know that I value humor, authenticity, and empathy above
